--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.2",
+    "concurrently": "^5.3.0",
     "gh-pages": "^3.1.0",
     "mongoose": "^5.10.0",
     "react": "^16.13.1",
